--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/belen-barriomartin/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barrio Martin</title>
-    <script type="module" crossorigin src="/assets/index.d1826b31.js"></script>
-    <link rel="stylesheet" href="/assets/index.a6e6173b.css">
+    <script type="module" crossorigin src="/belen-barriomartin/assets/index.d1826b31.js"></script>
+    <link rel="stylesheet" href="/belen-barriomartin/assets/index.a6e6173b.css">
   </head>
   <body>
     <div id="root"></div>
