--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/belen-barriomartin/favicon.png" />
+    <link rel="icon" type="svg" href="/belen-barriomartin/Favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barrio Martin</title>
-    <script type="module" crossorigin src="/belen-barriomartin/assets/index.27c04ae7.js"></script>
-    <link rel="stylesheet" href="/belen-barriomartin/assets/index.2724cdb0.css">
+    <script type="module" crossorigin src="/belen-barriomartin/assets/index.566e7951.js"></script>
+    <link rel="stylesheet" href="/belen-barriomartin/assets/index.b8bb5141.css">
   </head>
   <body>
     <div id="root"></div>
